# turbo-binary-size-bloat

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs
