[package]
name = "turbo-binary-size-bloat"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.98"
turbo-tasks = { git = "https://github.com/vercel/next.js.git", package = "turbo-tasks", branch = "canary" }

[build-dependencies]
turbo-tasks-build = { git = "https://github.com/vercel/next.js.git", package = "turbo-tasks-build", branch = "canary" }

[profile.release]
strip = "debuginfo"
debug = false
panic = "abort"
